Added Strategy into readme.md